Implement snapshot-ref remote restore
